# dive-dsa

./: .dockerignore  .env.Default  .gitguardian.yaml  .gitignore  404.html  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: CI.yml  publish-pypi.yml  release-dive-dsa-slicer.yml  release-dive-dsa.yml  release-dive-server.yml  release.yml  workflow-dive-dsa-slicer.yml  workflow-dive-dsa.yml  workflow.yml
Annotation-QuickStart/: index.html
Annotation-User-Interface-Overview/: index.html
DIVE-Metadata/: index.html
DataFormats/: index.html
Deployment-Docker-Compose/: index.html
Mouse-Keyboard-Shortcuts/: index.html
S3Import/: index.html
SAM2-Support/: index.html
Screenshots/: index.html
SlicerCLI/: index.html
Support/: index.html
UI-Actions/: index.html
UI-Annotation-View/: index.html
UI-AttributeFiltering/: index.html
UI-AttributeRendering/: index.html
UI-AttributeSwimlanes/: index.html
UI-AttributeTimeline/: index.html
UI-Attributes/: index.html
UI-Configuration/: index.html
UI-ConfigurationJSON/: index.html
UI-DatasetInfo/: index.html
UI-Group-Manager/: index.html
UI-Navigation-Editing-Bar/: index.html
UI-Notifications/: index.html
UI-Settings/: index.html
UI-Timeline/: index.html
UI-TimelineSettings/: index.html
UI-Track-List/: index.html
UI-Type-List/: index.html
UI-Visual-Masks/: index.html
VideoConversion/: index.html
VideoOverlay/: index.html
Web-Version/: index.html
client/: .env.production  README.md  checkbuild.sh  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.cli.json  tsconfig.json  tsconfig.rollup.json  tsconfig.spec.json  vite.config.js  vite.config.ts  vue.config.js
client/dive-common/: apispec.ts  constants.ts
client/dive-common/components/: AttributeEditor.vue  AttributeInput.vue  AttributeRendering.vue  DIVETools.vue  (+31 more)
client/src/: BaseAnnotation.ts  BaseAnnotationStore.ts  BaseFilterControls.ts  CameraStore.ts  ConfigurationManager.ts  StyleManager.ts  TrackFilterControls.spec.ts  TrackFilterControls.ts  TrackStore.spec.ts  TrackStore.ts  index.ts  notificatonBus.ts  provides.ts  recipe.ts  track.ts  types.ts  utils.ts  visualMasks.spec.ts  visualMasks.ts
dive-dsa-slicer/: README.md
dive-dsa-slicer/example-docker-containers/: .env.example  Dockerfile  README.md  cli_list.json  docker-compose.yml  download_ckpts.sh  download_sam3_ckpts.sh
dive-dsa-slicer/vue-girder-slicer-ui/: package-lock.json  package.json
docker/: entrypoint_server.sh  entrypoint_worker.sh  entrypoint_worker_gpu.sh  girder.Dockerfile  girder_worker.Dockerfile  girder_worker_gpu.Dockerfile  server_setup.py
docs/: Annotation-QuickStart.md  Annotation-User-Interface-Overview.md  DIVE-Metadata.md  DataFormats.md  Deployment-Docker-Compose.md  Deployment-Girder-5-Upgrade.md  Experimental.md  S3Import.md  SAM2-Support.md  SlicerCLI.md  Support.md  UI-Actions.md  UI-AttributeRendering.md  UI-AttributeShortcuts.md  UI-AttributeSwimlanes.md  UI-AttributeTimeline.md  UI-Attributes.md  UI-Configuration.md  UI-ConfigurationJSON.md  UI-DatasetInfo.md  UI-Navigation-Editing-Bar.md  UI-Notifications.md  UI-Settings.md  UI-TimelineSettings.md  UI-Visual-Masks.md  VideoConversion.md  VideoOverlay.md  Web-Version.md  index.md
scripts/: .gitignore  SampleDIVEDataInput.txt  cocoGenerateTestImages.py  createHeatMapSample.py  generateAttention.py  generateMetadata.py  generateNDJSON.py  jsonToND.py  maskToRLE.py  postProcessVideos.py  processJSON.py
scripts/SAM3/: .gitignore  text_prompt.py  tracking.py  transformer_tracking.py  video.py
scripts/assetStoreImport/: .gitignore  generateSampleData.py  minIOConfig.py
scripts/masks/: .gitignore  convertMasks2TrackJSON.py  maskTrackGenerator.py  rleToMask.py
scripts/metadata/: .gitignore  JSONLAddMetadata.py  SCALE_TEST.md  generateMetadata.py  metadataTransfer.py  metadataUpdater.py  run_metadata_scale_test.py  seed_metadata_scale.py
search/: search_index.json
server/: .gitignore  README.md  pyproject.toml  tox.ini
server/dive_server/: .gitignore  __init__.py  client_webroot.py  crud.py  crud_annotation.py  crud_dataset.py  crud_metadata_ingest.py  crud_metadata_jobs.py  crud_rpc.py  event.py  sam_model_downloader.py  views_annotation.py  views_configuration.py  views_dataset.py  views_metadata.py  views_rpc.py
server/dive_server/web_client/: JobStatus.js  main.js  package-lock.json  package.json  routes.js  tsconfig.json  vite-env.d.ts  vite.config.ts  webpack.helper.js
server/dive_server/web_client/stylesheets/views/: itemList.styl
server/dive_server/web_client/templates/: configView.pug
server/dive_server/web_client/utils/: utils.js
server/dive_server/web_client/views/: ConfigView.js  folderList.js  folderPage.js  itemList.js  itemPage.js  utils.js
server/dive_tasks/: __init__.py  __main__.py  celeryconfig.py  dive_batch_postprocess.py  dive_metadata_ingest.py  dive_metadata_slicer_cli.py  local_tasks.py  sam_tasks.py  setup.py  tasks.py
server/dive_utils/: __init__.py  constants.py  models.py  types.py
server/dive_utils/metadata/: models.py  numeric.py  slicer_cli_jobs.py
server/dive_utils/serializers/: kwcoco.py  viame.py
server/scripts/: __init__.py  build_release_assets.sh  build_wheel.sh
server/tests/: test_deserialize_kwcoco_json.py  test_deserialize_viame_json.py  test_metadata_bulk_import_json_roundtrip.py  test_metadata_ingest_jobs.py  test_numeric_metadata.py  test_process_metadata_helpers.py  test_serialize_viame_csv.py
test_deployment/: Dockerfile  Dockerfile.pypi  README.md  docker-compose.pypi.yml  docker-compose.yml  entrypoint_girder.sh  entrypoint_worker.sh  girder.Dockerfile  prepare.sh  worker.Dockerfile
testutils/: viame.spec.json
(+210 files in other folders)
