[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py311"]
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.env|\.venv|env|venv|_build|buck-out|build|dist'

[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.env|\.venv|env|venv|_build|buck-out|build|dist'

[project]
name = "dive_server"
version = "1.0.0"
description = "DIVE Data Server"
authors = [{name = "Kitware, Inc.", email = "viame-web@kitware.com"}]
license = {text = "Apache 2.0"}
readme = "README.md"
keywords = ["DIVE", "VIAME", "Annotation", "Computer Vision", "Marine"]
default-optional-dependency-keys = [
  "cpu",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10.0,<=3.12"
dependencies = [
  "cheroot>=8.4.5",
  "click>=8.1.3",
  "girder>=3.2.8",
  "girder_jobs>=3.2.8",
  "girder_client>=3.2.8",
  "girder_worker>=0.10.3",
  "girder_worker_utils>=0.9.1",
  "girder_large_image>=1.30.2",
  "pydantic==1.10.13",
  "pyrabbit2==1.0.7",
  "typing-extensions>=4.2.0",
  "GPUtil>=1.4.0",
  "requests<2.33.0",
  "urllib3<2.6",
  "girder-slicer-cli-web>=1.3.5",
  "pycocotools>=2.0.8",
  "pillow>=11.3.0",
  "numpy>=1.21.4",
  "opencv-python-headless>=4.11.0.86",
  "sam2>=1.1.0",
  "torch>=2.7.1",
  "triton>=3.4.0",
]

[project.optional-dependencies]
dev = [
  "opencv-python>=4.5.5",
  "tox>=3.25.0",
]
cpu = [
  "torch>=2.7.1",
  "triton>=3.4.0",
]
cu128 = [
  "torch>=2.7.1",
]


[project.scripts]
diveutils = "scripts.entrypoint_dev:cli"
dive = "scripts.entrypoint_main:cli"

[project.entry-points."girder.plugin"]
dive_server = "dive_server:GirderPlugin"

[project.entry-points."girder_worker_plugins"]
dive_tasks = "dive_tasks:DIVEPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dive_server", "dive_tasks", "dive_utils"]
include = ["**/*.mako"]

[tool.hatch.build.targets.sdist]
include = ["dive_server/", "dive_tasks/", "dive_utils/", "**/*.mako", "README.md"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
