[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py311"]
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.env|\.venv|env|venv|_build|buck-out|build|dist'

[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.env|\.venv|env|venv|_build|buck-out|build|dist'

[tool.poetry]
name = "dive_server"
version = "1.0.0"
description = "DIVE Data Server"
authors = ["Kitware, Inc. <viame-web@kitware.com>"]
license = "Apache 2.0"
include = ["**/*.mako"]
readme = "README.md"
keywords = ["DIVE", "VIAME", "Annotation", "Computer Vision", "Marine"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
]
packages = [
  { include = "dive_server" },
  { include = "dive_tasks" },
  { include = "dive_utils" },
]

[tool.poetry.dependencies]
python = ">=3.11.0,<=3.12"
cheroot = ">=8.4.5"
click = "^8.1.3"
girder = ">=3.2.8"
girder_jobs = ">=3.2.8"
girder_client = ">=3.2.8"
girder_worker = ">=0.10.3"
girder_worker_utils = ">=0.9.1"
girder_large_image = ">=1.30.2"
pydantic = "1.10.13"
pyrabbit2 = "1.0.7"
typing-extensions = "^4.2.0"
GPUtil = "^1.4.0"
requests = "<2.33.0"
urllib3 = "<2.6"
poetry-dynamic-versioning = {extras = ["plugin"], version = "^0.21.4"}
girder-slicer-cli-web = "^1.3.5"
pycocotools = "^2.0.8"
pillow = "^11.3.0"
numpy = "^2.3.0"
torch = "^2.8.0"
sam2 = "^1.1.0"
opencv-python-headless = "^4.11.0.86"
pandas = "^2.3.2"


[tool.poetry.group.dev.dependencies]
numpy = "^2.3.0"
opencv-python = "^4.5.5"
tox = "^3.25.0"

[tool.poetry.scripts]
diveutils = "scripts.entrypoint_dev:cli"
dive = "scripts.entrypoint_main:cli"

[tool.poetry.plugins."girder.plugin"]
dive_server = "dive_server:GirderPlugin"


[tool.poetry.plugins."girder_worker_plugins"]
dive_tasks = "dive_tasks:DIVEPlugin"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "any"
metadata = true

[tool.poetry-dynamic-versioning.substitution]
files = ["dive_server/__init__.py", "dive_tasks/__init__.py"]
